--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
         <span class="creatorButtonText">Creator</span>
     </a>
 
+    <!--
     <a class="creatorButtonWrapper magentaButtonWrapper" href="fortune.html">
       <img src="assets/stock/Yancy (Young).png" class="middleIMG" alt=""/>
       <img src="assets/stock/Yancy (Old).png" class="sideIMG lastIMG" alt=""/>
       <span class="creatorButtonText">Fortune Teller</span>
-    </a>
+    </a>-->
 
     <a class="creatorButtonWrapper magentaButtonWrapper" href="love.html">
       <img src="assets/stock/Don Stars.png" class="sideIMG firstIMG" alt=""/>
       <img src="assets/stock/Agnes.png" class="sideIMG lastIMG" alt=""/>
-      <span class="creatorButtonText">Love Tester</span>
+      <span class="creatorButtonText">Affinity Tester</span>
     </a>
 
     <p>Site by Colin Day - In Progress!</p>
