Added Samples and started DevLog

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
       <span class="creatorButtonText">Affinity Tester</span>
     </a>
 
+    <div class="sideBySide">
+    <a class="greyButtonWrapper" href="about.html">
+      <img src="assets/stock/Colin.png" class="sideIMG firstIMG" alt="Created Friend - Male and White with Blond Hair, represents site owner"/>
+      <span class="creatorButtonText">Devlog</span>
+    </a>
+
+    <a class="greyButtonWrapper" href="samples.html">
+      <span class="creatorButtonText">Samples</span>
+    </a>
+    </div>
+
     <p>Site by Colin Day - In Progress!</p>
   </body>
 </html>
