Improved some layout for mobile

--- a/love.html
+++ b/love.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="love.css">
     <!--link rel="stylesheet" type="text/css" href="fortune.css"-->
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Affinity Tester</title>
 
