--- a/love.html
+++ b/love.html
@@ -19,14 +19,14 @@
   </head>
   <body>
     <main>
-        <h1> <a href="index.html" style="text-decoration: none; color: inherit;">FriendLibrary</a> <span style="color: #e226ff;">Affinity Tester</span></h1>
+        <h1> <a href="index.html" class="siteLogo">FriendLibrary</a> <span style="color: #e226ff;">Affinity Tester</span></h1>
     </main>
     <script src="friend.js"></script>
     <script src="love.js"></script>
 
     <div class="content">
 
-    <h3>Overall Compatability</h3>
+    <h3>Overall Affinity</h3>
     <div id="overall" class="bar">
       <div id="overallProgress" class="progress overallProgress"></div>
       <p id="overallNum" class="progressNum">0%</p>
@@ -47,6 +47,8 @@
     <button id="friend2Load" onclick="friendLoad('friend2Code', 2)">Load</button>
     </div>
     </div>
+
+    <h3>Status:</h3> <output id="status">Okay</output>
 
     <div id="compatabilityVisualizer" class="compatabilityVisualizer">
 
