--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-        <h1> <a href="index.html" style="text-decoration: none; color: inherit;">FriendLibrary</a> <span style="color: #888888;">Devlog</span></h1>
+        <h1> <a href="index.html" class="siteLogo">FriendLibrary</a> <span style="color: #888888;">Devlog</span></h1>
     </main>
 
     <div class="content">
