--- a/samples.html
+++ b/samples.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <main>
-        <h1> <a href="index.html" style="text-decoration: none; color: inherit;">FriendLibrary</a> <span style="color: #888888;">Sample Codes</span></h1>
+        <h1> <a href="index.html" class="siteLogo">FriendLibrary</a> <span style="color: #888888;">Sample Codes</span></h1>
     </main>
     <script src="samples.js"></script>
 
